integrate swagger docs
