# api/account.go
@@ -15,7 +15,13 @@ type createAccountRequest struct {
 	Currency string `json:"currency" binding:"required, currency"`
 }
 
-// @Security ApiKeyAuth
+// @Summary   creates a new account with a given currency
+// @Accepts   json
+// @Produce   json
+// @Param     currency  body      string  true  "Account Currency"
+// @Success   200       {object}  db.Account
+// @Security  ApiKeyAuth
+// @Router    /accounts [POST]
 func (route *Server) createAccount(ctx *gin.Context) {
 	var req createAccountRequest
 
@@ -50,7 +56,13 @@ type getAccountRequest struct {
 	ID int64 `uri:"id" binding:"required, min=1"`
 }
 
-// @Security ApiKeyAuth
+// @Summary   gets an existing account for a specified User ID
+// @Accepts   json
+// @Produce   json
+// @Param     id   path      string  true  "User ID"
+// @Success   200  {object}  db.Account
+// @Security  ApiKeyAuth
+// @Router    /accounts/:id [GET]
 func (route *Server) getAccount(ctx *gin.Context) {
 	var req getAccountRequest
 
@@ -83,7 +95,13 @@ type listAccountRequest struct {
 	Page_Size int32 `form:"page_size" binding:"required, min=5, max=10"`
 }
 
-// @Security ApiKeyAuth
+// @Summary   lists all accounts for a specific User ID
+// @Accepts   json
+// @Produce   json
+// @Param     currency  body     string  true  "Account Currency"
+// @Success   200       {array}  []db.Account
+// @Security  ApiKeyAuth
+// @Router    /accounts [GET]
 func (server *Server) listAccount(ctx *gin.Context) {
 	var req listAccountRequest
 
@@ -93,7 +111,7 @@ func (server *Server) listAccount(ctx *gin.Context) {
 
 	authPayload := ctx.MustGet(authorizationPayloadKey).(*token.Payload)
 	arg := db.ListAccountsParams{
-		Owner: authPayload.Username,
+		Owner:  authPayload.Username,
 		Limit:  req.Page_Size,
 		Offset: (req.Page_ID - 1) * req.Page_Size,
 	}
